# ObserveX-Agent

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: architecture.md
kcrash/: __init__.py  exceptions.py  main.py
kcrash/agents/: base_agent.py  change_agent.py  hardware_agent.py  symbol_agent.py
kcrash/api/: __main__.py  auth.py  server.py
kcrash/collector/: change_fetcher.py  hw_errors.py  vmcore_reader.py
kcrash/core/: batch.py  cache.py  circuit_breaker.py  database.py  dedup.py  fingerprint.py  ingestion.py  metrics.py  pipeline.py  report.py  severity.py
kcrash/debate/: memory.py  moderator.py
kcrash/llm/: client.py
kcrash/notifications/: base.py  manager.py
kcrash/patch/: generator.py  kpatch.py  validator.py
kcrash/reasoning/: chain_history.py  chain_panic.py  prompts.py
kcrash/utils/: config.py  logging.py  token_counter.py
observex/: __init__.py  pipeline.py
observex/agents/: application_agent.py  base.py  change_agent.py  infra_agent.py  kernel_agent.py
observex/debate/: engine.py
observex/knowledge/: base.py
observex/models/: causal.py  debate.py  events.py  remediation.py
observex/processing/: causal_builder.py  clustering.py
observex/remediation/: engine.py
observex/stream/: ingestion.py
scripts/: mock_vmcore_info.py
tests/: test_api.py  test_enterprise.py  test_integration.py  test_observex.py
