[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kcrash-agent"
version = "0.1.0"
description = "Multi-agent kernel crash automatic root-cause analysis and hot-patch generation system"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "pydantic>=2.0",
    "pandas>=2.0",
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
]
ebpf = [
    "bcc>=0.27",
]
api = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "python-multipart>=0.0.6",
]
all = [
    "kcrash-agent[dev,ebpf,api]",
]

[project.scripts]
kcrash = "kcrash.main:cli"

[tool.setuptools.packages.find]
include = ["kcrash*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
